Add DomHandler class and update global styles

--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,13 @@
     <link rel="icon" href="assets/favicon.png" type="image/x-icon">
 </head>
 <body>
-    <main></main>
+    <main class="flex flex-column flex-center h-screen w-full">
+        <h1>
+            <span>Battleship</span>
+            <span id="turn"></span>
+        </h1>
+        <section id="container" class=" flex justify-between"></section>
+    </main>
     <script type="module" src="index.js"></script>
 </body>
 </html>
