Refactor game board creation and update logic

--- a/src/index.html
+++ b/src/index.html
@@ -8,13 +8,20 @@
     <link rel="icon" href="assets/favicon.png" type="image/x-icon">
 </head>
 <body>
-    <main class="flex flex-column flex-center h-screen w-full">
+    <header class="flex justify-center w-full">
         <h1>
             <span>Battleship</span>
             <span id="turn"></span>
         </h1>
+    </header>
+    <main class="flex flex-column flex-center">
         <section id="container" class=" flex justify-between"></section>
     </main>
+    <footer class="flex justify-center w-full">
+        <p class="copyright">
+            &copy; 2024 Battleship. All rights reserved.
+        </p>
+    </footer>
     <script type="module" src="index.js"></script>
 </body>
 </html>
